# UnifiedAPI

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.serena/: project.yml
src/unified_api/: __init__.py  config.py  errors.py  main.py  models.py
src/unified_api/control/: __init__.py  concurrency.py  rate_limiter.py  retry.py
src/unified_api/converters/: request.py  response.py  stream.py
src/unified_api/routes/: chat.py  messages.py
src/unified_api/tools/: prompt_builder.py  think_splitter.py  xml_parser.py
src/unified_api/upstream/: __init__.py  client.py  errors.py
tests/: test_chat_passthrough.py  test_concurrency.py  test_e2e.py  test_openai_toolcall.py  test_rate_limiter.py  test_request_convert.py  test_response_convert.py  test_retry.py  test_stream_convert.py  test_think_splitter.py  test_xml_parser.py
